# eks-upgrade-planner

./: .gitignore  CHANGELOG.md  Dockerfile  LICENSE  MANIFEST.in  README.md  build_entry.py  eks-upgrade-planner.spec  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.github/workflows/: build-binaries.yml  ci.yml  publish.yml  release.yml
Formula/: eks-upgrade-planner.rb
config/: config.yaml
data/: addon_versions.yaml  compatibility_matrix.yaml
docs/: ARCHITECTURE.md  CREATING_RELEASES.md  DISTRIBUTION_ROADMAP.md  INSTALLATION.md  USAGE.md  WORKFLOWS_GUIDE.md
examples/: sample_output.md
src/: __init__.py  __main__.py  cli.py
src/analyzer/: __init__.py  compatibility.py  deprecation.py  release_notes.py
src/planner/: __init__.py  migration_plan.py  risk_assessment.py  upgrade_path.py
src/reporter/: __init__.py  html.py  json_export.py  markdown.py
src/scanner/: __init__.py  eks_scanner.py  k8s_scanner.py
src/utils/: __init__.py  aws_helper.py  cache.py  k8s_helper.py  logger.py
tests/: __init__.py  test_analyzer.py  test_planner.py  test_scanner.py
