[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "eks-upgrade-planner"
version = "1.0.0"
description = "A production-ready CLI tool for EKS cluster upgrade planning"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "EKS Upgrade Planner Contributors"}
]
keywords = ["eks", "kubernetes", "aws", "upgrade", "planner", "devops"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Topic :: System :: Systems Administration",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "boto3>=1.34.0",
    "kubernetes>=28.1.0",
    "click>=8.1.0",
    "pyyaml>=6.0",
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "jinja2>=3.1.0",
    "rich>=13.0.0",
]

[project.urls]
Homepage = "https://github.com/subbaramireddyk/eks-upgrade-planner"
Repository = "https://github.com/subbaramireddyk/eks-upgrade-planner"
Issues = "https://github.com/subbaramireddyk/eks-upgrade-planner/issues"

[project.scripts]
eks-upgrade-planner = "src.cli:main"

[tool.setuptools]
packages = ["src", "src.analyzer", "src.planner", "src.reporter", "src.scanner", "src.utils"]
include-package-data = true

[tool.setuptools.package-data]
"*" = ["*.yaml", "*.yml"]
